Custom ArrayList implements `List` interface.